# vnc

./: .gitignore  readme.md
source/VNC/: VNC.sln
source/VNC/VNC/: Avatar.cs  Extent.cs  Program.cs  Service.cs  VNC.csproj  X11Manager.cs
source/VNC/VNCService/: Program.cs  VNCService.csproj  nlog.config
source/VNC_CPP/: CMakeLists.txt  readme.md
source/VNC_CPP/VNC_CPP/: CMakeLists.txt  Common.h  DulicationManager.cpp  PixelFormat.h  VNCService.cpp  VNCService.h  VNC_CPP.cpp  VNC_CPP.h  logger.cpp  logger.h  python.cpp  screen_linux.cpp  screen_linux.h  screen_win.cpp  screen_win.h  template.hpp
source/python/: VNC_CPP.pyd  VNC_CPP_39_x64.pyd  readme.md  test.py
